--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,12 @@
         android:theme="@style/Theme.PBLAPP"
         tools:targetApi="31">
         <activity
+            android:name=".Lemon"
+            android:exported="false" />
+        <activity
+            android:name=".Tomato"
+            android:exported="false" />
+        <activity
             android:name=".Hidro"
             android:exported="false" />
         <activity
